Finished Stretch by adding a fixed nav, and css animations

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -76,18 +76,50 @@ body {
 
 nav {
 	display: inline-block;
-	/*padding: 14px 60px;*/
+	position: fixed; 
+  	top: 0; 
+	width: 90%;
+	padding-bottom: 1%;
+	background:#ffb347;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
+	transition-duration: 1s;
+	  
+}
+
+nav:hover {
+	display: inline-block;
+	position: fixed; 
+  	top: 0; 
+	width: 90%;
+	padding-bottom: 1%;
+	background:#ffb347;
+	border-bottom-left-radius: 110px;
+	border-bottom-right-radius: 110px;
+	  
 }
 
 .topnav {
 	display: inline-block;
-	width: 88%;
+	width: 80%;
+	margin-top: 1%;
 }
 
  .topnav a {
 
-	color: lightgrey;
-	padding: 14px 120px 0 0;
+	color: white;
+	margin: 14px 5% 0 3%;
+	text-decoration: none;
+	font-size: 17px;
+	font-weight: bold;
+	transition-duration: 1s;
+	display: inline-block;
+}
+
+.topnav a:hover {
+
+	color: rgb(243, 247, 10);
+	margin: 14px 5% 120px 3%;
 	text-decoration: none;
 	font-size: 17px;
 	font-weight: bold;
@@ -95,35 +127,44 @@ nav {
 
 .logo {
 	display: inline-block;
-	width: 11%;
+	width: 10%;
+	filter: invert(1)
 }
 
 .hero {
-	margin-top: 5%;
-	margin-bottom: 0%;
+	margin-top: 10%;
 }
 .bigText {
 	display: inline-block;
-	width: 45%;
-	padding: 5% 5% 5% 10%;
+	width: 30%;
+	padding: 5% 5% 5% 5%;
 	margin-right: 5%;
-	margin-top: 0%;
+	margin-bottom: 2%;
+	margin-left: 10%;
 	text-align: center;
 	font-size: 75px;
 }
 
 .bigText a {
-	font-size: 15px;
+	font-size: 20px;
 	text-decoration: none;
 	border: 1px solid black;
 	color: black;
-	padding: 1% 10%;
+	padding: 1% 15%;
+	margin-top: 0;
+	transition-duration: 1s;
+}
+
+.bigText a:hover {
+
+	border: 1px solid #ffb347;
+	color: #ffb347;
 }
 
 .hero img {
 	display: inline-block;
-	width: 45%;
-	padding: 0% 10%;
+	width: 40%;
+	padding: 0% 5%;
 }
 
 hr {
